<resources>
    <string name="app_name">EDU_Calculator</string>
    <string name="btnAdd">+</string>
    <string name="btnSubstract">-</string>
    <string name="btnComa">.</string>
    <string name="_0">0</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnResult">=</string>
    <string name="btnC">C</string>
    <string name="btnCe">CE</string>
    <string name="btnPercent">%</string>
    <string name="btnMultiply">*</string>
    <string name="btnDivide">/</string>
    <string name="btnSqrt">SQRT</string>
    <string name="alert0">Dividing by 0 is not allowed!</string>
    <string name="btnCos">COS</string>
    <string name="btnPow">POW</string>
    <string name="btnSin">SIN</string>
    <string name="btnTan">TAN</string>
</resources>
