<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="commaciejprogramuje.facebook.edu_calculator.CalculatorActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/upperTextView"
            style="@style/UpperStyle"
            android:layout_weight="5"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/resultTextView"
            style="@style/DisplayStyle"
            android:layout_weight="20"
            android:textSize="50sp" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="0dp"
            android:layout_weight="0"
            android:shrinkColumns="0,1,2,3,4"
            android:stretchColumns="0,1,2,3,4"
            android:weightSum="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button1"
                    style="@style/KeyStyle"
                    android:text="@string/btn1" />

                <Button
                    android:id="@+id/button2"
                    style="@style/KeyStyle"
                    android:text="@string/btn2" />

                <Button
                    android:id="@+id/button3"
                    style="@style/KeyStyle"
                    android:text="@string/btn3" />

                <Button
                    android:id="@+id/button4"
                    style="@style/KeyStyle"
                    android:text="@string/btnCe" />

                <Button
                    android:id="@+id/button"
                    style="@style/KeyStyle"
                    android:text="@string/btnC" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button17"
                    style="@style/KeyStyle"
                    android:text="@string/btn4" />

                <Button
                    android:id="@+id/button5"
                    style="@style/KeyStyle"
                    android:text="@string/btn5" />

                <Button
                    android:id="@+id/button6"
                    style="@style/KeyStyle"
                    android:text="@string/btn6" />

                <Button
                    android:id="@+id/button7"
                    style="@style/KeyStyle"
                    android:text="@string/btnPercent" />

                <Button
                    android:id="@+id/button8"
                    style="@style/KeyStyle"
                    android:text="@string/btnMultiply" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button18"
                    style="@style/KeyStyle"
                    android:text="@string/btn7" />

                <Button
                    android:id="@+id/button9"
                    style="@style/KeyStyle"
                    android:text="@string/btn8" />

                <Button
                    android:id="@+id/button10"
                    style="@style/KeyStyle"
                    android:text="@string/btn9" />

                <Button
                    android:id="@+id/button11"
                    style="@style/KeyStyle"
                    android:text="@string/btnSubstract" />

                <Button
                    android:id="@+id/button12"
                    style="@style/KeyStyle"
                    android:text="@string/btnDivide" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button19"
                    style="@style/KeyStyle"
                    android:text="@string/btnComa" />

                <Button
                    android:id="@+id/button13"
                    style="@style/KeyStyle"
                    android:text="@string/btn0" />

                <Button
                    android:id="@+id/button14"
                    style="@style/KeyStyle"
                    android:text="@string/btnSqrt" />

                <Button
                    android:id="@+id/button15"
                    style="@style/KeyStyle"
                    android:text="@string/btnAdd" />

                <Button
                    android:id="@+id/button16"
                    style="@style/KeyStyle"
                    android:text="@string/btnResult" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
